--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.0.0-alpha.8",
+    "@sentry/nextjs": "^9.42.0",
     "clsx": "^2.1.1",
     "motion": "^12.23.9",
     "next": "15.4.4",
